--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@ body {
     height: 100vh;
     max-width: 100%;
   }
-
+  //Image Area
   .image-block {
     @extend .block;
     background: $background-image;
@@ -16,28 +16,85 @@ body {
     .intro-text {
       padding-top: 20vh;
       padding-left: 33vw;
-      #name {
-        color: $text-light;
-      }
-      #p {
-      }
-    }
-  }
-  .landing-pt2 {
-    @extend .block;
-    h1 {
-      margin-top: 0;
-    }
-  }
-  .tech-block {
-    height: 30vh;
-    background-color: $palette-vivid;
-    .tech-container {
-      margin: 0;
-      padding: 5vh 0 0 2vw;
       h1 {
         color: $text-light;
+        font-size: 5rem;
+        margin-bottom: 0;
+        font-family: Helvetica;
+      }
+      p {
+        font-family: Helvetica;
       }
     }
+  }
+  //Black block
+  .black-block {
+    padding: 3vh;
+    background-color: $palette-grey;
+    max-width: 100%;
+  }
+  .about-me-block {
+    max-width: 100%;
+    height: 50vh;
+    background-color: $palette-tea;
+    h1 {
+      padding: 0;
+      margin: 0;
+    }
+  }
+  //Orange area
+  .tech-block {
+    background-color: $palette-vivid;
+    height: 30vh;
+
+    .tech-section {
+      background-color: $palette-vivid;
+      float: left;
+      width: 50%;
+      height: 100%;
+      margin: 0;
+
+      .textNIcons {
+        padding: 5vh 0 0 3vw;
+        h1 {
+          font-size: 3.75rem;
+          font-family: sans-serif;
+          margin: 0;
+        }
+      }
+
+      .icons {
+        text-decoration: none;
+        padding-left: 1rem;
+
+        i {
+          color: $text-dark;
+          font-size: 2.75rem;
+        }
+        i:hover {
+          color: white;
+        }
+      }
+    }
+    .info-section {
+      float: right;
+      width: 50%;
+      margin: 0;
+      height: 100%;
+      background-color: $palette-vivid;
+    }
+    h1 {
+      margin: 0;
+    }
+  }
+  //White block {
+  .white-block {
+    padding: 3vh;
+    background-color: white;
+    max-width: 100%;
+  }
+  .projects-block {
+    background-color: lightblue;
+    height: 50vh;
   }
 }
